Added a nowplaying to the POC webinterface
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@28439 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/web/poc_jsonrpc/basic.css
+++ b/web/poc_jsonrpc/basic.css
@@ -43,3 +43,21 @@ table.Info td.Title {
   text-align:right;
   color:white;
 }
+
+table.Playlist th {
+  text-align:left;
+  background-color:rgb(50,50,50);
+}
+
+table.Playlist td.playing {
+  text-align:center;
+  background:black;
+}
+
+table.Playlist tr.Odd {
+  background:rgb(0,0,0);
+}
+
+table.Playlist tr.Even {
+  background:rgb(30,30,30);
+}
